syntax = "proto3";

package library;


message Library {
  string id = 1;
  string title = 2;
  string description = 3;

}



message GetLibraryRequest {
  string library_id = 1;
}

message GetLibraryResponse {
  Library library = 1;
}

message SearchLibrarysRequest {
  string query = 1;
}

message SearchLibrarysResponse {
  repeated Library librarys = 1;
}

message CreateLibraryRequest {
  string library_id = 1;
  string title = 2;
  string description = 3;
}

message CreateLibraryResponse {
  Library library = 1;
}

service LibraryService {
  rpc GetLibrary(GetLibraryRequest) returns (GetLibraryResponse);
  rpc SearchLibrarys(SearchLibrarysRequest) returns (SearchLibrarysResponse);
  rpc CreateLibrary(CreateLibraryRequest) returns (CreateLibraryResponse);
}
